--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "luxon": "^3.5.0",
+    "micro": "^10.0.1",
     "stripe": "^17.7.0"
   }
 }
